# autoclicker

./: .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
native/: Cargo.toml  README.md  build.rs  package.json
native/src/: lib.rs  windows.cpp
src/: App.vue  electron-functions.ts  style.css
src/electron/: main.ts  preload.ts
src/electron/main/: main.ts
src/electron/preload/: preload.ts
