[package]
name = "native"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
once_cell = "1.19.0"

[build-dependencies]
cc = "1.1.2"
